<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:background="@drawable/gpc_sunset"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:background="#80d3d3d3"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <!--edit text for user name-->
        <EditText
            android:id="@+id/idEdtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/username"
            android:backgroundTint="@color/button_blue"
            android:inputType="textEmailAddress" />

        <!--edit text for user password-->
        <EditText
            android:id="@+id/idEdtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/password"
            android:background="@drawable/edit_text_line"
            android:inputType="textPassword" />

        <!--button to register our new user-->
        <Button
            android:id="@+id/idBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="26dp"
            android:background="@color/button_blue"
            android:text="@string/login"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            style="@style/buttonTextStyle" />
    </LinearLayout>

</RelativeLayout>