<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/edit_text_horizontal_margin"
    android:background="@drawable/gpc_background"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button"
        style="@style/entryButtonTextStyle"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/activity_larger_vertical_margin"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/ic_chat"
        android:drawablePadding="@dimen/activity_vertical_margin"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="start|center_vertical"
        android:onClick="onChatClicked"
        android:paddingStart="@dimen/button_icon_padding"
        android:text="@string/chat_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button2"
        style="@style/entryButtonTextStyle"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/activity_larger_vertical_margin"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/activity_vertical_margin"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="start|center_vertical"
        android:onClick="onLoginClicked"
        android:paddingStart="@dimen/button_icon_padding"
        android:text="@string/login_button"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        style="@style/entryButtonTextStyle"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/ic_animation"
        android:drawablePadding="@dimen/activity_vertical_margin"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:gravity="start|center_vertical"
        android:onClick="onAnimationClicked"
        android:paddingStart="@dimen/button_icon_padding"
        android:text="@string/animation_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>
